# faf-simlint

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
fixtures/: declared_dps_example.json
fixtures/units/: ual0107.lua  uel0101.lua
fixtures/weapons/: sample_weapon.lua
src/: lib.rs  main.rs
src/anomaly/: mod.rs
src/config/: mod.rs
src/gamedata/: mod.rs
src/model/: extract.rs  mod.rs  projectile.rs
src/parser/: lua_value.rs  mod.rs
src/report/: mod.rs
src/scheduler/: mod.rs
src/store/: mod.rs
src/util/: mod.rs
testdata/real/: README.md
tests/: integration.rs
web/: .gitkeep
